; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_video_console.c_vc_enable_progressmeter.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_video_console.c_vc_enable_progressmeter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kProgressMeterKernel = common dso_local global i64 0, align 8
@vc_progressmeter_enable = common dso_local global i64 0, align 8
@vc_progressmeter_hold = common dso_local global i32 0, align 4
@kProgressMeterUser = common dso_local global i32 0, align 4
@kProgressMeterOff = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vc_enable_progressmeter(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @kProgressMeterKernel, align 8
  %4 = load i64, i64* @vc_progressmeter_enable, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* @vc_progressmeter_hold, align 4
  br label %18

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = load i32, i32* @kProgressMeterUser, align 4
  br label %15

13:                                               ; preds = %8
  %14 = load i32, i32* @kProgressMeterOff, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = phi i32 [ %12, %11 ], [ %14, %13 ]
  %17 = call i32 @internal_enable_progressmeter(i32 %16)
  br label %18

18:                                               ; preds = %15, %6
  ret void
}

declare dso_local i32 @internal_enable_progressmeter(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
